BA    7- [mingw] writebin did not work
BA    8- forprime(N=2^100,oo,...) did not work
      9- mseval(W,s,p) did not check 'p' in weight 2
     10- matrixqz(m, -1 or -2) was very slow
     11- ZG_normalize destroyed its input
     12- [install] prototype code D0,U, did not work
BA   13- use of complex default function argument could lead to stack error.
     14- factorpadic(2*x^4+x^2,2,2) -> division by 0 [#1876]
     15- incgam(110, I) very inaccurate
BA   16- ellinit over number field was not compatible with generic operations.
BA   17- [breakloop] dbg_up could confuse the breakloop.

  Changed
      1- rewrite bnfnarrow
      2- the bid struct from idealstar has been changed, the new format is
         not compatible with pari-2.9
      3- bnrdisclist output is now an ordinary vector (not a vector of vectors)
      4- made nfsign() / nfsign_arch() reliable [ use algebraic method
         besides floating point approximation to real embeddings ]
      5- support ??refcard-ell  (or mf/nf/lfun)
      6- [libpari internals] bnrinit(,,1) [with generators] is no longer
         necessary for bnrsurjection()
      7- bnrinit(,,1) is no longer necessary for bnrL1, bnrconductor,
         bnrrootnumber, bnrstark, rnfkummer, galoissubcyclo
      8- msfromell: use a (much faster) modular algorithm, allow a vector
         of isogenous curves
      9- mseval(W,s,p): allow 2x2 matrix for the path 'p' argument
     10- allow mseval(W, t_MAT, p) to evaluate many symbols simultaneously

  Added
      1- [libari] ZM_isidentity
      2- [libpari] rename buchnarrow -> bnfnarrow
      3- [libpari] ZX_radical
BA    4- [gmp] support for mpn_divexact_1
BA    5- parallel fflog in characteristic at most 5
BA    6- parallel znlog for large characteristic
      7- [libpari] u_chinese_coprime
BA    8- new GP function elltamagawa

Changed

Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd