@@ -20,6 +20,8 @@ BA   13- use of complex default function argument could lead to stack error.
      15- incgam(110, I) very inaccurate
 BA   16- ellinit over number field was not compatible with generic operations.
 BA   17- [breakloop] dbg_up could confuse the breakloop.
+HC   18- sumnummonieninit(,,a) + sumnummonien(n = a, ...) with a > 1 gave wrong
+         result
 
   Changed
       1- rewrite bnfnarrow
